<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFEFEF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="16dp"/>

            <!-- Languages Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                android:textSize="16sp"
                android:padding="16dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- English Option -->
                <RadioButton
                    android:id="@+id/radioEnglish"
                    android:checked="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english"/>

                <!-- Serbian Option -->
                <RadioButton
                    android:id="@+id/radioSerbian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/serbian"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Notifications Label -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notifications"
                    android:textSize="16sp"/>

                <!-- Switch -->
                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchNotifications"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- Notification Options (Initially hidden) -->
            <RadioGroup
                android:id="@+id/notificationOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <!-- 1 Day Option -->
                <RadioButton
                    android:id="@+id/notification1Hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_hour"/>

                <!-- 7 Days Option -->
                <RadioButton
                    android:id="@+id/notification1Day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_day"/>

                <!-- 14 Days Option -->
                <RadioButton
                    android:checked="true"
                    android:id="@+id/notification7Days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_7_days"/>

            </RadioGroup>
            <Button
                android:id="@+id/saveButtonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"/>
        </LinearLayout>



    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>